product page desktop styling done

--- a/privateevents.html
+++ b/privateevents.html
@@ -26,13 +26,25 @@
                 <div class="textbox">
                     <h3>Our offer</h3>
                     <h5>What will you get?</h5>
-<ul>
-                    <li><p>We provide everything. All you have to do is relax, taste, and enjoy.</p></li>
-                    <li><p>We feature only exemplary Moldovan wines of premium quality. </p></li>
-                    <li><p>Detailed introduction of Moldovan Wines, traditions, and culture.</p></li>
-                    <li><p>Discover the unique grapes grown only in Moldova</p></li>
-                    <li><p>Learn from our world class Sommelier</p></li>
-                    <li><p> Have the opportunity for team-building activities</p></li>
+                    <ul>
+                        <li>
+                            <p>We provide everything. All you have to do is relax, taste, and enjoy.</p>
+                        </li>
+                        <li>
+                            <p>We feature only exemplary Moldovan wines of premium quality. </p>
+                        </li>
+                        <li>
+                            <p>Detailed introduction of Moldovan Wines, traditions, and culture.</p>
+                        </li>
+                        <li>
+                            <p>Discover the unique grapes grown only in Moldova</p>
+                        </li>
+                        <li>
+                            <p>Learn from our world class Sommelier</p>
+                        </li>
+                        <li>
+                            <p> Have the opportunity for team-building activities</p>
+                        </li>
 
 
                     </ul>
@@ -44,11 +56,11 @@
             </div>
         </section>
 
-<section class="prices">
-         <h3>prices</h3>
-                    <h5>Our options</h5>
+        <section class="prices">
+            <h3>prices</h3>
+            <h5>Our options</h5>
 
-    <p>Here you can check the prices of booking a wine tasting with us, according to the number of employees attending the event.</p>
+            <p>Here you can check the prices of booking a wine tasting with us, according to the number of employees attending the event.</p>
 
 
 
@@ -57,22 +69,16 @@
 
         </section>
 
-
-
-
-
-
-
-               <section class="event">
+        <section class="event">
             <div class="wrapper2">
 
                 <div class="textbox">
                     <h3>The experience</h3>
                     <h5>More than just tasting</h5>
-<p>
-                    Goodbye to the old traditional, boring conservative sit-down tastings.<br>
+                    <p>
+                        Goodbye to the old traditional, boring conservative sit-down tastings.<br>
 
-Hello to a new fun formate, perfect for socialising, networking, and team-building.
+                        Hello to a new fun formate, perfect for socialising, networking, and team-building.
 
                     </p>
                     <button>
