--- a/product.html
+++ b/product.html
@@ -23,75 +23,103 @@
     </header>
 
     <main></main>
+
     <article class="product">
         <div class=product_card>
-            <img class="product_background" src="images/photos/wineshop/bgimage_wineshop.png" alt="" />
-            <img class="product_image" src="" alt="" />
-            <h1 class="product_title">Femme Fatale</h1>
-            <h2 class="product_winery">Carpe Diem</h2>
+            <div class="wrapper2">
+                <div class="wineimages">
+                    <div class=product_background_container>
+                        <img class="product_background" src="images/photos/wineshop/productbackground.png" alt="" />
+                    </div>
+                    <img class="product_image" src="images/photos/wineshop/femmefatale_wine.png" alt="" />
+                </div>
+                <div class="wineinfo">
+                    <span class="center">
+                        <h2 class="product_title">Femme Fatale</h2>
+                        <h3 class="product_winery">Carpe Diem</h3>
+                    </span>
+                    <ul>
+                        <li class="thewine">The wine</li>
+                        <li class="description">Description</li>
+                        <li class="tasteprofile">Taste profile</li>
+                    </ul>
+                    <span class="thewine_info">
+                        <p class="product_shortdescription">Finely balanced wine with a lot of character - light, fresh, but still rich of fruity flavour</p>
+                        <p class="product_volume">Volume: 0,75 L</p>
+                        <p class="product_alcohol">Alc.%: 13.5%</p>
+                        <p class="product_price">150 DKK</p>
+                        <p><strong>Quantity:</strong></p>
 
-            <ul class="product_info">
-                <li class="thewine">
-                    <p class="product_shortdescription">Finely balanced wine with a lot of character - light, fresh, but still rich of fruity flavour</p>
-                    <p class="product_volume">0,75 L</p>
-                    <p class="product_alcohol">13.5%</p>
-                    <p class="product_price">150 DKK</p>
+                        <span class="shopping_buttons">
+                            <button class="minus_btn">-</button>
+                            <p class="quantity_number">1</p>
+                            <button class="plus_btn">+</button>
+                            <button class="addtocart_btn">ADD TO CART</button>
+                        </span>
 
-                    <section class="shopping_btn">
-                        <h3 class="quantity_title">Quantity:</h3>
-                        <button class="minus_btn">-</button>
-                        <p class="quatity_number">1</p>
-                        <button class="plus_btn">+</button>
-                        <button class="addtocart_btn">ADD TO CART</button>
-                    </section>
-                </li>
-                <li class="description"></li>
-                <li class="tasteprofile"></li>
-            </ul>
-            <section class="winery_info">
-                <img class="winery_logo" src="images/photos/wineshop/winery_carpediem.png" alt="" />
-                <h4 class="winery_title">THE WINERY</h4>
-                <h5 class="winery_name">Carpe Diem</h5>
-                <p class="winery_description">Carpe Diem is a family owned winery that goes back four generations. The winery sits in Codru wine region, known for its amazing terroir. They use both French inspired and indigenous varieties to make individual unique wines and blends. The vineyards fill 10,5 ha, so therefore they are part of the Moldovan Association for Small Wineries. Each wine is delicately produced, and all grapes are hand picked and harvested manually.</p>
-            </section>
+                    </span>
+                    <span class="description_info" style="display:none">
+                        <p class="product_longdescription">Blend of Feteasca Alba and Feteasca Regala. Feteasca Alba is a light, fresh and delicate wine, whereas Feteasca Regala has a richer flavour of citrus and apple. The blend takes the best from both indigenous grapes, and creates a finely balanced wine with a lot of character!
+
+                            Gold Medal Berlin Wine Awards 2018.</p>
+                    </span>
+                    <span class="tasteprofile_info" style="display:none">
+                        <img class="tasteprofile_img" src="images/photos/wineshop/tasteprofile2.png" alt="" />
+                    </span>
+
+                </div>
+            </div>
         </div>
+        <section class="winery_info">
+            <span class="wineryimg">
+                <img class="winery_logo" src="images/photos/wineshop/winery_carpediem.png" alt="" />
+            </span>
+            <span class="winerytext">
+                <h3 class="winery_title">THE WINERY</h3>
+                <h2 class="winery_name">Carpe Diem</h2>
+                <p class="winery_description">Carpe Diem is a family owned winery that goes back four generations. The winery sits in Codru wine region, known for its amazing terroir. They use both French inspired and indigenous varieties to make individual unique wines and blends. The vineyards fill 10,5 ha, so therefore they are part of the Moldovan Association for Small Wineries. Each wine is delicately produced, and all grapes are hand picked and harvested manually.</p>
+            </span>
+        </section>
+
     </article>
 
     <article class="product_suggestions">
-        <section class="suggestion1">
-            <img class="suggestion1_img" src="images/photos/wineshop/femmefatale_wine.png" alt="" />
-            <h6 class="suggestion1_title">Femme Fatale</h6>
-            <h7 class="suggestion1_winery">Carpe Diem</h7>
-            <p class="suggestion1_price">150 DKK</p>
-        </section>
-        <section class="suggestion2">
-            <img class="suggestion2_img" src="images/photos/wineshop/femmefatale_wine.png" alt="" />
-            <h6 class="suggestion2_title">Femme Fatale</h6>
-            <h7 class="suggestion2_winery">Carpe Diem</h7>
-            <p class="suggestion2_price">150 DKK</p>
-        </section>
-        <section class="suggestion3">
-            <img class="suggestion3_img" src="images/photos/wineshop/femmefatale_wine.png" alt="" />
-            <h6 class="suggestion3_title">Femme Fatale</h6>
-            <h7 class="suggestion3_winery">Carpe Diem</h7>
-            <p class="suggestion3_price">150 DKK</p>
-        </section>
-        <section class="suggestion4">
-            <img class="suggestion4_img" src="images/photos/wineshop/femmefatale_wine.png" alt="" />
-            <h6 class="suggestion4_title">Femme Fatale</h6>
-            <h7 class="suggestion4_winery">Carpe Diem</h7>
-            <p class="suggestion4_price">150 DKK</p>
-        </section>
-        <section class="suggestion5">
-            <img class="suggestion5_img" src="images/photos/wineshop/femmefatale_wine.png" alt="" />
-            <h6 class="suggestion5_title">Femme Fatale</h6>
-            <h7 class="suggestion5_winery">Carpe Diem</h7>
-            <p class="suggestion5_price">150 DKK</p>
-        </section>
+        <span class="center"><h3>You might also like</h3></span>
+        <div class="wrapper5">
+
+        <div class="box">
+            <img class="suggestion_img" src="images/photos/wineshop/femmefatale_wine.png" alt="" />
+            <p class="suggestion_title">Femme Fatale</p>
+            <p class="suggestion_winery">Carpe Diem</p>
+            <p class="suggestion_price">150 DKK</p>
+        </div>
+        <div class="box">
+            <img class="suggestion_img" src="images/photos/wineshop/1mimisauvignonblanc.png" alt="" />
+            <p class="suggestion_title">Sauvignon Blanc</p>
+            <p class="suggestion_winery">Castel Mimi</p>
+            <p class="suggestion_price">125 DKK</p>
+        </div>
+        <div class="box">
+            <img class="suggestion_img" src="images/photos/wineshop/1gitanararaneagra.png" alt="" />
+            <p class="suggestion_title">Rara Neagra</p>
+            <p class="suggestion_winery">Gitana</p>
+            <p class="suggestion_price">175 DKK</p>
+        </div>
+        <div class="box">
+            <img class="suggestion_img" src="images/photos/wineshop/1surori.png" alt="" />
+            <p class="suggestion_title">Surori Rose</p>
+            <p class="suggestion_winery">Gitana</p>
+            <p class="suggestion_price">195 DKK</p>
+        </div>
+        <div class="box">
+            <img class="suggestion_img" src="images/photos/wineshop/1feteascaalba.png" alt="" />
+            <p class="suggestion_title">Feteasca Alba</p>
+            <p class="suggestion_winery">Castel Mimi</p>
+            <p class="suggestion_price">125 DKK</p>
+        </div>
+            </div>
     </article>
 
 
     <script src="script.js"></script>
-</body>
-
-</html>
+</body></html>
