event page testimonials refined

--- a/publicevents.html
+++ b/publicevents.html
@@ -23,6 +23,7 @@
 
     </section>
 
+
     <section class="event">
         <div class="wrapper2">
             <div class="event1image"></div>
@@ -34,15 +35,14 @@
                             <div>
                                 <img src="images/icons/events/time.png">
                             </div>
-                            <p class="time">SAT, 19 DEC 2020
-                                <br>16:00-19:00h</p>
+                            <p class="time">SAT, 12 DEC 2020 <br> 17:00-21:00h</p>
                         </div>
                         <div class="box">
                             <div>
                                 <img src="images/icons/events/location.png">
                             </div>
-                            <p class="time">Fairbar
-                                <br>Aarhus</p>
+                            <p class="time">Strøm Bar
+                                <br>Copenhagen</p>
                         </div>
                         <div class="box">
                             <div>
@@ -63,25 +63,26 @@
         </div>
     </section>
 
-    <section class="event">
+        <section class="event">
         <div class="wrapper2">
             <div class="event2image"></div>
             <div class="textbox">
                 <div class="center">
-                    <h5>Christmas wine tasting (Copenhagen)</h5>
+                    <h5>Christmas wine tasting (Aarhus)</h5>
                     <div class="wrapper">
                         <div class="box">
                             <div>
                                 <img src="images/icons/events/time.png">
                             </div>
-                            <p class="time">SAT, 12 DEC 2020 <br> 17:00-21:00h</p>
+                            <p class="time">SAT, 19 DEC 2020
+                                <br>16:00-19:00h</p>
                         </div>
                         <div class="box">
                             <div>
                                 <img src="images/icons/events/location.png">
                             </div>
-                            <p class="time">Strøm Bar
-                                <br>Copenhagen</p>
+                            <p class="time">Fairbar
+                                <br>Aarhus</p>
                         </div>
                         <div class="box">
                             <div>
