--- a/events.html
+++ b/events.html
@@ -10,110 +10,118 @@
 
 <body>
     <header></header>
-<main>
-    <div class="bannerevents">
-        <h1>Events</h1>
-    </div>
-
-    <section class="intro">
-        <h3>Events</h3>
-        <h2>Winetastic Experience</h2>
-        <p> We host two kind of wine tasting events to get you closer to the fantastic Moldovan wine culture.
-            But what both have in common is the informal setting of them, nothing to do with the traditional sit-down tastings. Our events invite to a more social interaction, not only between our wine experts and the attendees but also between the attendees themselves.</p>
-
-
-        <div class="eventimages">
-            <div class="publiceventsimg"><span class="buttonstyle"><button><p>Public wine<br> tastings</p></button></span></div>
-            <div class="privateeventsimg"><span class="buttonstyle"><button><p>Wine tastings <br>for companies</p></button></span></div>
+    <main>
+        <div class="bannerevents">
+            <h1>Events</h1>
         </div>
 
-    </section>
+        <section class="intro">
+            <h3>Events</h3>
+            <h2>Winetastic Experience</h2>
+            <p> We host two kind of wine tasting events to get you closer to the fantastic Moldovan wine culture.
+                But what both have in common is the informal setting of them, nothing to do with the traditional sit-down tastings. Our events invite to a more social interaction, not only between our wine experts and the attendees but also between the attendees themselves.</p>
 
 
-
-    <section class="offer">
-        <h3>What we offer</h3>
-        <h2>Unique wine tastings</h2>
-
-        <div class="wrapper">
-            <div class="box">
-                <div class="offer_1">
-                    <img src="images/icons/events/wine-presentation.png">
-                </div>
-                <p class="offer_title">Individualized presentations</p>
-                <p class="offer_des">Our wine experts talk about the wine in smaller groups.</p>
+            <div class="eventimages">
+                <div class="publiceventsimg"><span class="buttonstyle"><button>
+                            <p>Public wine<br> tastings</p>
+                        </button></span></div>
+                <div class="privateeventsimg"><span class="buttonstyle"><button>
+                            <p>Wine tastings <br>for companies</p>
+                        </button></span></div>
             </div>
 
-            <div class="box">
-                <div class="offer_2">
-                    <img src="images/icons/events/wine-selection.png">
+        </section>
+
+
+
+        <section class="offers">
+            <h3>What we offer</h3>
+            <h2>Unique wine tastings</h2>
+
+            <div class="wrapper">
+                <div class="box center">
+                    <div class="offer">
+                        <img src="images/icons/events/wine-presentation.png">
+                    </div>
+                    <p class="offer_title">Individualized presentations</p>
+                    <p class="offer_des">Our wine experts talk about the wine in smaller groups.</p>
                 </div>
-                <p class="offer_title">carefully selected wines</p>
-                <p class="offer_des">We feature only exemplary Moldovan wines of premium quality.</p>
+
+                <div class="box center">
+                    <div class="offer">
+                        <img src="images/icons/events/wine-selection.png">
+                    </div>
+                    <p class="offer_title">carefully selected wines</p>
+                    <p class="offer_des">We feature only exemplary Moldovan wines of premium quality.</p>
+                </div>
+
+                <div class="box center">
+                    <div class="offer">
+                        <img src="images/icons/events/moldova.png">
+                    </div>
+                    <p class="offer_title">True Moldovan experience</p>
+                    <p class="offer_des">Detailed introduction of Moldovan wines, traditions, and culture.</p>
+                </div>
+            </div>
+        </section>
+
+        <section class="testimonial">
+
+            <h3>Testimonials</h3>
+            <h2>What people say about us</h2>
+
+            <div class="wrapper">
+                <div class="box left">
+                    <div class="quotemark_grey"></div>
+                    <div class="test_card_white">
+                        <p class="test_des">"I'm from Moldova and suggested my Danish friends joining one of Moldovin's events so they could try real Moldovan wine. They loved it and we had a great time!"</p>
+                    </div>
+                    <div class="test_person">
+                        <div class="test_image">
+                            <img src="images/photos/events/alexandru.png">
+
+                        </div>
+                        <p class="test_name"><strong>Alexandru Gutu</strong></p>
+                    </div>
+                </div>
+
+                <div class="box middle">
+                    <div class="quotemark_red"></div>
+                    <div class="test_card_grey">
+                        <p class="test_des">"Top Wines from a lesser-known region! Excellent wines from Moldova and hosts amazing wine tastings too! It's always nice to expand your wine knowledge especially from lesser-known regions like Moldova that create extraordinary wines. Their wine tasting is very cozy, fun, and great networking with other wine enthusiasts!"</p>
+                    </div>
+                    <div class="test_person">
+                        <div class="test_image">
+                            <img src="images/photos/events/katja.png">
+                        </div>
+                        <p class="test_name"><strong>Katja Petersen</strong></p>
+                    </div>
+                </div>
+
+                <div class="box right">
+                    <div class="quotemark_grey"></div>
+                    <div class="test_card_white">
+                        <p class="test_des">"I'm a fan of Moldovan wines, so I was delighted to taste some of the best ones with Moldovin"</p>
+                    </div>
+                    <div class="test_person">
+                        <div class="test_image">
+                            <img src="images/photos/events/trine.png">
+
+                        </div>
+                        <p class="test_name"><strong>Trine Bengtsson</strong></p>
+                    </div>
+                </div>
             </div>
 
-            <div class="box">
-                <div class="offer_2">
-                    <img src="images/icons/events/moldova.png">
-                </div>
-                <p class="offer_title">True Moldovan experience</p>
-                <p class="offer_des">Detailed introduction of Moldovan wines, traditions, and culture.</p>
-            </div>
-        </div>
-    </section>
-
-    <section class="testimonial">
-
-        <h3>Testimonials</h3>
-        <h2>What people say about us</h2>
-
-        <div class="wrapper">
-            <div class="box">
-                <p class="quotemark">"</p>
-                <div class="textcard">
-                    <p class="test_des">"I'm from Moldova and suggested my Danish friends joining one of Moldovin's events so they could try real Moldovan wine. They loved it and we had a great time!"</p>
-                </div>
-                <div class="test_1">
-                    <img src="images/photos/events/alexandru.png">
-
-                </div>
-                <p class="test_name">Alexandru Gutu</p>
-            </div>
-
-            <div class="box">
-                <p class="quotemark">"</p>
-                <div class="textcard">
-                    <p class="test_des">"Top Wines from a lesser-known region! Excellent wines from Moldova and hosts amazing wine tastings too! It's always nice to expand your wine knowledge especially from lesser-known regions like Moldova that create extraordinary wines. Their wine tasting is very cozy, fun, and great networking with other wine enthusiasts!"</p>
-                </div>
-                <div class="test_2">
-                    <img src="images/photos/events/katja.png">
-                </div>
-                <p class="test_name">Katja Petersen</p>
-            </div>
-
-            <div class="box">
-                <p class="quotemark">"</p>
-                <div class="textcard">
-                    <p class="test_des">"I'm a fan of Moldovan wines, so I was delighted to taste some of the best ones with Moldovin"</p>
-                </div>
-                <div class="test_3">
-                    <img src="images/photos/events/trine.png">
-
-                </div>
-                <p class="test_name">Trine Bengtsson</p>
-            </div>
-        </div>
 
 
 
 
 
 
+        </section>
 
-    </section>
-
-</main>
+    </main>
     <script src=""></script>
-</body>
-
-</html>
+</body></html>
