--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
             <source src="video/IMG_4824.mp4" type="video/mp4">
         </video>
         <div class="video_title">
-            <h1>We want to push your boundaries in
-                new and interesting ways, by sharing with you the best selection of Moldovan wines.</h1>
+            <p>"We want to push your boundaries in
+                new and interesting ways, by sharing with you the best selection of Moldovan wines."</p>
         </div>
     </section>
 </header>
@@ -43,128 +43,188 @@
 <body>
 
     <section class="xmas_offer">
-        <div class="xmas_offer_background">
-            <img src="images/photos/homepage/Group%20192.png">
+        <div class="xmas_container">
+            <img class="xmas_offer_background" src="images/photos/homepage/Group%20192.png">
+            <img class="wine_offer" src="images/photos/homepage/Group%20179.png">
         </div>
-        <div class="wine_offer">
-            <img src="images/photos/homepage/Group%20179.png">
-        </div>
+
         <div class="xmas_text">
-            <h1> HEADING 1</h1>
-            <h2> HEADING 2</h2>
-            <p> LOREM IPSUM</p>
-            <button> CLICK HERE </button>
+            <h1>Special Christmas Offer</h1>
+            <h2>2 BOTTLES OF LUPI</h2>
+            <p>The perfect Christmas gift, or something to enjoy with any Christmas Dinner.</p>
+            <button>CHECK THE OFFER ></button>
         </div>
     </section>
 
+
     <section class="why_moldova">
-        <div class="moldova_map">
-            <img src="images/photos/homepage/whymoldova.png">
-        </div>
+
+        <img class="moldova_map" src="images/photos/homepage/whymoldova.png">
+
         <div class="why_moldova_text">
-            <h3>Why Moldova?</h3>
+            <h3>WHY MOLDOVA?</h3>
             <h1> Born With Wine</h1>
-            <p> BULSHIT TEXT HERE HELO HELO HELO</p>
+            <p> The little known European country of Moldova is putting its name on the map for its fantastic wines. The rich flavor of these wines is fast becoming recognised by world-renowned wine experts. Moldovan wine has great texture, warmth and flavour that will surprise and delight.
+
+                “Moldovans consider wine to be in the blood of their people. They are born with wine, live with wine and die with wine.”</p>
         </div>
     </section>
+
 
     <section class="icons_overview">
         <div class="wrapper">
             <div class="box">
 
-                <div class="icon_1">
+                <div class="icon">
                     <img src="images/icons/homepage/geography.png">
                 </div>
-                <p class="icon_title"> Geography</p>
-                <p class="icon_des"> Moldova Shit helo helo</p>
+                <div class="icon_text">
+                    <p class="icon_title"> Geography</p>
+                    <p class="icon_des">Moldova has 112 thousand hectares of vineyard planted with over 50 types of technical varieties. There are 3 wine regions: Valul lui Traian, Stefan Voda and Codru.</p>
+                </div>
             </div>
 
             <div class="box">
 
-                <div class="icon_2">
+                <div class="icon">
                     <img src="images/icons/homepage/climate.png">
                 </div>
-                <p class="icon_title"> Climate</p>
-                <p class="icon_des"> Moldova Shit helo helo</p>
+                <div class="icon_text">
+                    <p class="icon_title"> Climate</p>
+                    <p class="icon_des">The temperate climate which is moderately-continental has allowed the locals to produce and perfect their wines. </p>
+                </div>
             </div>
 
             <div class="box">
 
-                <div class="icon_3">
+                <div class="icon">
                     <img src="images/icons/homepage/soil.png">
                 </div>
-                <p class="icon_title"> Soil</p>
-                <p class="icon_des"> Moldova Shit helo helo</p>
+                <div class="icon_text">
+                    <p class="icon_title"> Soil</p>
+                    <p class="icon_des">Rich black soil overlying limestone bedrock full of fossilised shells, perfect for vineyards.</p>
+                </div>
             </div>
 
             <div class="box">
 
-                <div class="icon_4">
+                <div class="icon">
                     <img src="images/icons/homepage/grapes.png">
                 </div>
-                <p class="icon_title"> Grapes</p>
-                <p class="icon_des"> Moldova Shit helo helo</p>
+                <div class="icon_text">
+                    <p class="icon_title"> Grapes</p>
+                    <p class="icon_des">Unique indigenous grape varieties: Feteasca Alba, Feteasca Neagra, Rara Neagra, among others.</p>
+                </div>
             </div>
 
             <div class="box">
 
-                <div class="icon_5">
+                <div class="icon">
                     <img src="images/icons/homepage/taste.png">
                 </div>
-                <p class="icon_title">Taste</p>
-                <p class="icon_des"> Moldova Shit helo helo</p>
+                <div class="icon_text">
+                    <p class="icon_title">Taste</p>
+                    <p class="icon_des">Authentic texture, warmth and flavour.</p>
+                </div>
             </div>
 
             <div class="box">
 
-                <div class="icon_6">
+                <div class="icon">
                     <img src="images/icons/homepage/winemaking.png">
                 </div>
-                <p class="icon_title">Winemaking</p>
-                <p class="icon_des"> Moldova Shit helo helo</p>
+                <div class="icon_text">
+                    <p class="icon_title">Winemaking</p>
+                    <p class="icon_des">Produced with care by talented winemakers using local grapes as well as international ones, adjusted to the local terroir.</p>
+                </div>
             </div>
         </div>
 
     </section>
 
     <section class="about_us">
-        <div class="about_us_img"> <img src="images/photos/homepage/theconnection.png"> </div>
+        <div> <img class="about_us_img" src="images/photos/homepage/theconnection.png"> </div>
         <div class="about_us_text">
-            <h3>About Us</h3>
+            <h3>ABOUT US</h3>
             <h1> We're the Connection</h1>
-            <p> BULSHIT TEXT about my butt</p>
-            <button> click to know us </button>
+            <p>Based in Copenhagen, Denmark, MoldoVin has been providing the Danish wine market with high quality Moldovan wine since 2017.
+
+                <br> <br>Our mission is to promote Moldovan culture and provide a platform for our community to experience exciting wines. </p>
+            <button>CLICK TO KNOW US ></button>
         </div>
     </section>
 
     <section class="our_treasure">
-        <div class="our_treasure_img"> <img src="images/photos/homepage/ourtreasure.png"> </div>
+        <div> <img class="our_treasure_img" src="images/photos/homepage/ourtreasure.png"> </div>
         <div class="our_treasure_text">
-            <h3>Wines</h3>
+            <h3>WINES</h3>
             <h1>Out Treasure</h1>
-            <p> BULSHIT TEXT about my butt</p>
-            <button> go to wineshop </button>
+            <p>In MoldoVin, we are proud of our wine selection. We only sell the best wines from specifically chosen wineries in Moldova.
+
+                <br> <br> Check which wines we are offering right now!
+
+            </p>
+            <button>GO TO WINESHOP ></button>
         </div>
     </section>
 
     <section class="winetastic_exp">
         <div class="winetastic_exp_text">
-            <h3>Events</h3>
+            <h3>EVENTS</h3>
             <h1>Winetastic Experience</h1>
-            <p> BULSHIT TEXT about experience</p>
+            <p>We host two kind of wine tasting events to get you closer to the fantastic Moldovan wine culture.
+                But what both have in common is the informal setting of them, nothing to do with the traditional sit-down tastings.
+                <br><br> Our events invite to a more social interaction, not only between our wine experts and the attendees but also between the attendees themselves.</p>
         </div>
-        <div class="winetastic_exp_1"> <img src="images/photos/homepage/event1.png"> </div>
-        <div class="winetastic_exp_2"> <img src="images/photos/homepage/event2.png"> </div>
-        <button class="public_winetasting"> public winetasting </button>
-        <button class="corporate_winetasting"> corporate winetasting </button>
+        <div class="eventimages">
+            <div class="publiceventsimg"><span class="buttonstyle"><button>Public wine<br> tastings</button></span></div>
+            <div class="privateeventsimg"><span class="buttonstyle"><button>Wine tastings <br>for companies</button></span></div>
+        </div>
     </section>
 
 
     <footer>
-        <p>Copyright © Moldovin</p>
+        <img class="logowhite" src="images/icons/homepage/moldovin_white.svg" alt="Moldovin logo">
+        <div class="footergrid">
+            <div class="footer_1">
+                <p>Phone: +45 40116274</p>
+                <p>Mail: info@moldovin.dk</p>
+                <p>CVR: 38570609</p>
+            </div>
+
+            <div class="footer_2">
+                <div class="f2_information">
+                    <p class="ftitle_style">Information</p>
+                    <p>About us</p>
+                    <p>Wineries</p>
+                    <p>Shipping</p>
+                </div> <br>
+                <div class="f2_Useful Links">
+                    <p class="ftitle_style">Information</p>
+                    <p>Contact us</p>
+                    <p>Leave a review</p>
+                    <p>Terms and Conditions</p>
+                </div>
+            </div>
+
+            <div class="footer_3">
+                <div class="stay_connected">
+                    <p class="ftitle_style">Stay connected</p>
+                    <p>Subscribe to our newsletter. Don’t worry we won’t spam you. You’ll only get the most important information and special offers!</p>
+                    <button>SUBSCRIBE</button>
+                </div> <br>
+                <div class="our_partners">
+                    <p class="ftitle_style">Our Partners</p>
+                    <img class="partners" src="images/icons/homepage/partners_logo.svg">
+                </div>
+
+
+            </div>
+
+        </div>
+
+        <p class="copyright">Copyright © Moldovin</p>
     </footer>
 
     <script src=""></script>
-</body>
-
-</html>
+</body></html>
