icons made smaller

--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
         <div class="wrapper">
             <div class="box">
 
-                <div class="icon">
-                    <img src="images/icons/homepage/geography.png">
+                <div>
+                    <img class="icon" src="images/icons/homepage/geography.png">
                 </div>
                 <div class="icon_text">
                     <p class="icon_title"> Geography</p>
@@ -86,8 +86,8 @@
 
             <div class="box">
 
-                <div class="icon">
-                    <img src="images/icons/homepage/climate.png">
+                <div >
+                    <img class="icon" src="images/icons/homepage/climate.png">
                 </div>
                 <div class="icon_text">
                     <p class="icon_title"> Climate</p>
@@ -97,8 +97,8 @@
 
             <div class="box">
 
-                <div class="icon">
-                    <img src="images/icons/homepage/soil.png">
+                <div >
+                    <img class="icon" src="images/icons/homepage/soil.png">
                 </div>
                 <div class="icon_text">
                     <p class="icon_title"> Soil</p>
@@ -108,8 +108,8 @@
 
             <div class="box">
 
-                <div class="icon">
-                    <img src="images/icons/homepage/grapes.png">
+                <div >
+                    <img class="icon" src="images/icons/homepage/grapes.png">
                 </div>
                 <div class="icon_text">
                     <p class="icon_title"> Grapes</p>
@@ -119,8 +119,8 @@
 
             <div class="box">
 
-                <div class="icon">
-                    <img src="images/icons/homepage/taste.png">
+                <div >
+                    <img class="icon" src="images/icons/homepage/taste.png">
                 </div>
                 <div class="icon_text">
                     <p class="icon_title">Taste</p>
@@ -130,8 +130,8 @@
 
             <div class="box">
 
-                <div class="icon">
-                    <img src="images/icons/homepage/winemaking.png">
+                <div >
+                    <img class="icon" src="images/icons/homepage/winemaking.png">
                 </div>
                 <div class="icon_text">
                     <p class="icon_title">Winemaking</p>
