--- a/wineshop.html
+++ b/wineshop.html
@@ -69,44 +69,23 @@
     </section>
 
 
-    <!--
-            <section class="filternav">
-            <ul class="filterwrapper">
-                <li class="allwines_filter"><a href="" class="">ALL WINES</a></li>
-                <li class="white_filter">
-                    <a href="" class="">
-                        <div class="whitefilter_dot"></div>
-                        <p class="whitefilter_title">WHITE</p>
-                    </a>
-                </li>
-                <li class="red_filter">
-                    <a href="" class="">
-                        <div class="redfilter_dot"></div>
-                        <p class="redfilter_title">RED</p>
-                    </a>
-                </li>
-                <li class="rose_filter">
-                    <a href="" class="">
-                        <div class="rosefilter_dot"></div>
-                        <p class="rosefilter_title">ROSE</p>
-                    </a>
-                </li>
-            </ul>
-        </section>
--->
+    <main></main>
 
-
-    <main>
+    <template id="product_template">
         <article class="productlist">
             <img class="productlist_image" src="images/photos/wineshop/femmefatale_wine.png" alt="" />
             <div class="productlist_text">
                 <h4 class="productlist_title">Femme Fatale</h4>
                 <h5 class="productlist_winery">Carpe Diem</h5>
-                <p class="productlist_shortdescription">Finely balanced wine with a lot of character - light, fresh, but still rich of fruity flavour</p>
+                <p class="productlist_description">Finely balanced wine with a lot of character - light, fresh, but still rich of fruity flavour</p>
                 <p class="productlist_price">150 DKK</p>
             </div>
         </article>
+    </template>
 
+
+
+<!--
         <article class="productlist">
             <img class="productlist_image" src="images/photos/wineshop/femmefatale_wine.png" alt="" />
             <div class="productlist_text">
@@ -176,8 +155,9 @@
                 <p class="productlist_price">150 DKK</p>
             </div>
         </article>
+-->
 
-    </main>
+
     <!--
     <template>
         <article class="life-change">
