add price, style title

--- a/wineshop.html
+++ b/wineshop.html
@@ -78,14 +78,15 @@
                 <h4 class="productlist_title">Femme Fatale</h4>
                 <h5 class="productlist_winery">Carpe Diem</h5>
                 <p class="productlist_description">Finely balanced wine with a lot of character - light, fresh, but still rich of fruity flavour</p>
-                <p class="productlist_price">150 DKK</p>
+                <p class="productlist_price"><span class="price">150</span>DKK</p>
             </div>
         </article>
     </template>
 
 
 
-<!--
+
+    <!--
         <article class="productlist">
             <img class="productlist_image" src="images/photos/wineshop/femmefatale_wine.png" alt="" />
             <div class="productlist_text">
