additional css styling on mobile version homepage, last two sections

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
     </section>
 
     <section class="our_treasure">
-        <div> <img class="our_treasure_img" src="images/photos/homepage/ourtreasure.png"> </div>
+        <div class="img_treasure_back"> <img class="our_treasure_img" src="images/photos/homepage/ourtreasure.png"> </div>
         <div class="our_treasure_text">
             <h3>WINES</h3>
             <h1>Out Treasure</h1>
