--- a/wineshop.html
+++ b/wineshop.html
@@ -78,13 +78,13 @@
                 <h4 class="productlist_title">Femme Fatale</h4>
                 <h5 class="productlist_winery">Carpe Diem</h5>
                 <p class="productlist_description">Finely balanced wine with a lot of character - light, fresh, but still rich of fruity flavour</p>
-                <p class="productlist_price"><span class="price">150</span>DKK</p>
+                <p class="productlist_price">150</p>
             </div>
         </article>
     </template>
 
 
-
+<!-- <p class="productlist_price"><span class="price">150</span> DKK</p> -->
 
     <!--
         <article class="productlist">
