privateevent page finished, banners, nav added to all

--- a/privateevents.html
+++ b/privateevents.html
@@ -8,6 +8,21 @@
 </head>
 
 <body>
+    <header>
+        <nav>
+            <div> <a href="index.html"><img class="logo" src="images/icons/homepage/moldovin_logo.svg"></a></div>
+            <ul>
+                <li><a href="index.html">HOME</a></li>
+                <li><a href="aboutus.html">ABOUT US</a></li>
+                <li><a href="wineshop.html">WINE SHOP</a></li>
+                <li><a href="events.html">EVENTS</a></li>
+            </ul>
+        </nav>
+        <div class="banner_privateevents">
+            <h1>wine tastings for companies</h1>
+        </div>
+
+    </header>
 
     <main>
 
@@ -52,7 +67,7 @@
                         <p>Book event</p>
                     </button>
                 </div>
-                <div class="event1image"></div>
+                <div class="privateeventimage1"></div>
             </div>
         </section>
 
@@ -62,16 +77,34 @@
 
             <p>Here you can check the prices of booking a wine tasting with us, according to the number of employees attending the event.</p>
 
-
-
-
-
-
+            <div class="wrapper gap1">
+                <div class="box grey">
+                    <p><strong>LESS THAN <br>10 EMPLOYEES</strong></p>
+                    <div class="center_horizontal">
+                        <img class="people_icon" src="images/icons/events/people.png">
+                        <p>200 DKK<br>per person</p>
+                    </div>
+                </div>
+                <div class="box grey">
+                    <p><strong>BETWEEN <br>10-30 <br>EMPLOYEES</strong></p>
+                    <div class="center_horizontal">
+                        <img class="people_icon" src="images/icons/events/people.png">
+                        <p>250 DKK<br>per person</p>
+                    </div>
+                </div>
+                <div class="box grey">
+                    <p><strong>MORE THAN <br> 30 EMPLOYEES</strong></p>
+                    <div class="center_horizontal">
+                        <img class="people_icon" src="images/icons/events/people.png">
+                        <p>300 DKK<br>per person</p>
+                    </div>
+                </div>
+            </div>
         </section>
 
         <section class="event">
             <div class="wrapper2">
-
+                <div class="privateeventimage2"></div>
                 <div class="textbox">
                     <h3>The experience</h3>
                     <h5>More than just tasting</h5>
@@ -85,11 +118,40 @@
                         <p>Book event</p>
                     </button>
                 </div>
-                <div class="event1image"></div>
+
             </div>
         </section>
 
+        <section class="center">
+            <h5>Book your tasting here</h5>
 
+            <p>To book an event with us, send us a message telling the number of people that will be attending the event or any specific requests and we'll make the experience happen!</p>
+
+            <div class="wrapper_contactus">
+                <div class="name">
+                    <p>Name*</p>
+                    <div class="name_box"></div>
+                </div>
+                <div class="email">
+                    <p>E-mail*</p>
+                    <div class="email_box"></div>
+                </div>
+                <div class="company">
+                    <p>Company*</p>
+                    <div class="company_box"></div>
+                </div>
+                <div class="phone">
+                    <p>Phone number</p>
+                    <div class="phone_box"></div>
+                </div>
+                <div class="message">
+                    <p>Message</p>
+                    <div class="message_box"></div>
+                </div>
+                <div class="button_send_container"><button class="button_send">Send</button></div>
+            </div>
+
+        </section>
 
     </main>
 
