--- a/events.html
+++ b/events.html
@@ -9,11 +9,22 @@
 </head>
 
 <body>
-    <header></header>
-    <main>
-        <div class="bannerevents">
+    <header>
+                <nav>
+            <div> <a href="index.html"><img class="logo" src="images/icons/homepage/moldovin_logo.svg"></a></div>
+            <ul>
+                <li><a href="index.html">HOME</a></li>
+                <li><a href="aboutus.html">ABOUT US</a></li>
+                <li><a href="wineshop.html">WINE SHOP</a></li>
+                <li><a href="events.html">EVENTS</a></li>
+            </ul>
+        </nav>
+            <div class="banner_events">
             <h1>Events</h1>
         </div>
+    </header>
+    <main>
+
 
         <section class="intro">
             <h3>Events</h3>
