--- a/publicevents.html
+++ b/publicevents.html
@@ -9,100 +9,111 @@
 </head>
 
 <body>
-    <header></header>
-<main>
-    <div class="bannerpublicevents">
-        <h1>Public wine tastings</h1>
-    </div>
-
-    <section class="intro">
-        <h3>Public wine tastings</h3>
-        <h2>Upcoming events</h2>
-        <p>Find out where and when you can join us for a glass of Moldovan wine!
-            Get more information about our next wine tasting and purchase tickets via our Biletto Portal.</p>
-
-    </section>
-
-
-    <section class="event">
-        <div class="wrapper2">
-            <div class="event1image"></div>
-            <div class="textbox">
-                <div class="center">
-                    <h5>Christmas wine tasting (Copenhagen)</h5>
-                    <div class="wrapper">
-                        <div class="box">
-                            <div>
-                                <img src="images/icons/events/time.png">
-                            </div>
-                            <p class="time">SAT, 12 DEC 2020 <br> 17:00-21:00h</p>
-                        </div>
-                        <div class="box">
-                            <div>
-                                <img src="images/icons/events/location.png">
-                            </div>
-                            <p class="time">Strøm Bar
-                                <br>Copenhagen</p>
-                        </div>
-                        <div class="box">
-                            <div>
-                                <img src="images/icons/events/ticket.png">
-                            </div>
-                            <p class="time">200 DKK pre-tickets
-                                <br>250 DKK at the door</p>
-                        </div>
-                    </div>
-                </div>
-                <p><strong>What's included?</strong></p>
-                <p>Four samples of premium Moldovan wine.<br> Information on the wines, production methods and history of Moldova from our expert sommelier Corneliu Tiulenev.
-                </p>
-                <button>
-                    <p>Get Tickets</p>
-                </button>
-            </div>
+    <header>
+                <nav>
+            <div> <a href="index.html"><img class="logo" src="images/icons/homepage/moldovin_logo.svg"></a></div>
+            <ul>
+                <li><a href="index.html">HOME</a></li>
+                <li><a href="aboutus.html">ABOUT US</a></li>
+                <li><a href="wineshop.html">WINE SHOP</a></li>
+                <li><a href="events.html">EVENTS</a></li>
+            </ul>
+        </nav>
+        <div class="banner_publicevents">
+            <h1>Public wine tastings</h1>
         </div>
-    </section>
+    </header>
+    <main>
+
+
+        <section class="intro">
+            <h3>Public wine tastings</h3>
+            <h2>Upcoming events</h2>
+            <p>Find out where and when you can join us for a glass of Moldovan wine!
+                Get more information about our next wine tasting and purchase tickets via our Biletto Portal.</p>
+
+        </section>
+
 
         <section class="event">
-        <div class="wrapper2">
-            <div class="event2image"></div>
-            <div class="textbox">
-                <div class="center">
-                    <h5>Christmas wine tasting (Aarhus)</h5>
-                    <div class="wrapper">
-                        <div class="box">
-                            <div>
-                                <img src="images/icons/events/time.png">
+            <div class="wrapper2">
+                <div class="event1image"></div>
+                <div class="textbox">
+                    <div class="center">
+                        <h5>Christmas wine tasting (Copenhagen)</h5>
+                        <div class="wrapper">
+                            <div class="box">
+                                <div>
+                                    <img src="images/icons/events/time.png">
+                                </div>
+                                <p class="time">SAT, 12 DEC 2020 <br> 17:00-21:00h</p>
                             </div>
-                            <p class="time">SAT, 19 DEC 2020
-                                <br>16:00-19:00h</p>
-                        </div>
-                        <div class="box">
-                            <div>
-                                <img src="images/icons/events/location.png">
+                            <div class="box">
+                                <div>
+                                    <img src="images/icons/events/location.png">
+                                </div>
+                                <p class="time">Strøm Bar
+                                    <br>Copenhagen</p>
                             </div>
-                            <p class="time">Fairbar
-                                <br>Aarhus</p>
-                        </div>
-                        <div class="box">
-                            <div>
-                                <img src="images/icons/events/ticket.png">
+                            <div class="box">
+                                <div>
+                                    <img src="images/icons/events/ticket.png">
+                                </div>
+                                <p class="time">200 DKK pre-tickets
+                                    <br>250 DKK at the door</p>
                             </div>
-                            <p class="time">200 DKK pre-tickets
-                                <br>250 DKK at the door</p>
                         </div>
                     </div>
+                    <p><strong>What's included?</strong></p>
+                    <p>Four samples of premium Moldovan wine.<br> Information on the wines, production methods and history of Moldova from our expert sommelier Corneliu Tiulenev.
+                    </p>
+                    <button>
+                        <p>Get Tickets</p>
+                    </button>
                 </div>
-                <p><strong>What's included?</strong></p>
-                <p>Four samples of premium Moldovan wine.<br> Information on the wines, production methods and history of Moldova from our expert sommelier Corneliu Tiulenev.
-                </p>
-                <button>
-                    <p>Get Tickets</p>
-                </button>
             </div>
-        </div>
-    </section>
+        </section>
 
-</main>
+        <section class="event">
+            <div class="wrapper2">
+                <div class="event2image"></div>
+                <div class="textbox">
+                    <div class="center">
+                        <h5>Christmas wine tasting (Aarhus)</h5>
+                        <div class="wrapper">
+                            <div class="box">
+                                <div>
+                                    <img src="images/icons/events/time.png">
+                                </div>
+                                <p class="time">SAT, 19 DEC 2020
+                                    <br>16:00-19:00h</p>
+                            </div>
+                            <div class="box">
+                                <div>
+                                    <img src="images/icons/events/location.png">
+                                </div>
+                                <p class="time">Fairbar
+                                    <br>Aarhus</p>
+                            </div>
+                            <div class="box">
+                                <div>
+                                    <img src="images/icons/events/ticket.png">
+                                </div>
+                                <p class="time">200 DKK pre-tickets
+                                    <br>250 DKK at the door</p>
+                            </div>
+                        </div>
+                    </div>
+                    <p><strong>What's included?</strong></p>
+                    <p>Four samples of premium Moldovan wine.<br> Information on the wines, production methods and history of Moldova from our expert sommelier Corneliu Tiulenev.
+                    </p>
+                    <button>
+                        <p>Get Tickets</p>
+                    </button>
+                </div>
+            </div>
+        </section>
+
+    </main>
     <script src=""></script>
 </body></html>
