add routing, try fixing description

--- a/wineshop.html
+++ b/wineshop.html
@@ -73,91 +73,31 @@
 
     <template id="product_template">
         <article class="productlist">
-            <img class="productlist_image" src="images/photos/wineshop/femmefatale_wine.png" alt="" />
+            <a href="product.html?product_id=" class="subpage_link">
+                <img class="productlist_image" src="images/photos/wineshop/femmefatale_wine.png" alt="" />
+            </a>
             <div class="productlist_text">
                 <h4 class="productlist_title">Femme Fatale</h4>
                 <h5 class="productlist_winery">Carpe Diem</h5>
-                <p class="productlist_description">Finely balanced wine with a lot of character - light, fresh, but still rich of fruity flavour</p>
+                <div class="productlist_description">Finely balanced wine with a lot of character - light, fresh, but still rich of fruity flavour</div>
                 <p class="productlist_price">150</p>
             </div>
         </article>
     </template>
 
+    <script src="script.js"></script>
+</body></html>
 
-<!-- <p class="productlist_price"><span class="price">150</span> DKK</p> -->
 
-    <!--
-        <article class="productlist">
-            <img class="productlist_image" src="images/photos/wineshop/femmefatale_wine.png" alt="" />
-            <div class="productlist_text">
-                <h4 class="productlist_title">Femme Fatale</h4>
-                <h5 class="productlist_winery">Carpe Diem</h5>
-                <p class="productlist_shortdescription">Finely balanced wine with a lot of character - light, fresh, but still rich of fruity flavour</p>
-                <p class="productlist_price">150 DKK</p>
-            </div>
-        </article>
 
-        <article class="productlist">
-            <img class="productlist_image" src="images/photos/wineshop/femmefatale_wine.png" alt="" />
-            <div class="productlist_text">
-                <h4 class="productlist_title">Femme Fatale</h4>
-                <h5 class="productlist_winery">Carpe Diem</h5>
-                <p class="productlist_shortdescription">Finely balanced wine with a lot of character - light, fresh, but still rich of fruity flavour</p>
-                <p class="productlist_price">150 DKK</p>
-            </div>
-        </article>
 
-        <article class="productlist">
-            <img class="productlist_image" src="images/photos/wineshop/femmefatale_wine.png" alt="" />
-            <div class="productlist_text">
-                <h4 class="productlist_title">Femme Fatale</h4>
-                <h5 class="productlist_winery">Carpe Diem</h5>
-                <p class="productlist_shortdescription">Finely balanced wine with a lot of character - light, fresh, but still rich of fruity flavour</p>
-                <p class="productlist_price">150 DKK</p>
-            </div>
-        </article>
 
-                <article class="productlist">
-            <img class="productlist_image" src="images/photos/wineshop/femmefatale_wine.png" alt="" />
-            <div class="productlist_text">
-                <h4 class="productlist_title">Femme Fatale</h4>
-                <h5 class="productlist_winery">Carpe Diem</h5>
-                <p class="productlist_shortdescription">Finely balanced wine with a lot of character - light, fresh, but still rich of fruity flavour</p>
-                <p class="productlist_price">150 DKK</p>
-            </div>
-        </article>
 
-        <article class="productlist">
-            <img class="productlist_image" src="images/photos/wineshop/femmefatale_wine.png" alt="" />
-            <div class="productlist_text">
-                <h4 class="productlist_title">Femme Fatale</h4>
-                <h5 class="productlist_winery">Carpe Diem</h5>
-                <p class="productlist_shortdescription">Finely balanced wine with a lot of character - light, fresh, but still rich of fruity flavour</p>
-                <p class="productlist_price">150 DKK</p>
-            </div>
-        </article>
 
-        <article class="productlist">
-            <img class="productlist_image" src="images/photos/wineshop/femmefatale_wine.png" alt="" />
-            <div class="productlist_text">
-                <h4 class="productlist_title">Femme Fatale</h4>
-                <h5 class="productlist_winery">Carpe Diem</h5>
-                <p class="productlist_shortdescription">Finely balanced wine with a lot of character - light, fresh, but still rich of fruity flavour</p>
-                <p class="productlist_price">150 DKK</p>
-            </div>
-        </article>
 
-        <article class="productlist">
-            <img class="productlist_image" src="images/photos/wineshop/femmefatale_wine.png" alt="" />
-            <div class="productlist_text">
-                <h4 class="productlist_title">Femme Fatale</h4>
-                <h5 class="productlist_winery">Carpe Diem</h5>
-                <p class="productlist_shortdescription">Finely balanced wine with a lot of character - light, fresh, but still rich of fruity flavour</p>
-                <p class="productlist_price">150 DKK</p>
-            </div>
-        </article>
--->
 
+
+    <!-- <p class="productlist_price"><span class="price">150</span> DKK</p> -->
 
     <!--
     <template>
@@ -174,5 +114,3 @@
         </article>
     </template>
     -->
-    <script src="script.js"></script>
-</body></html>
