change tags naming

--- a/product.html
+++ b/product.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/product.css">
 </head>
 
-<body>
+<body class="productbody">
 
     <header>
         <nav>
@@ -61,7 +61,7 @@
                     <span class="description_info" style="display:none">
                         <p class="product_longdescription">Blend of Feteasca Alba and Feteasca Regala. Feteasca Alba is a light, fresh and delicate wine, whereas Feteasca Regala has a richer flavour of citrus and apple. The blend takes the best from both indigenous grapes, and creates a finely balanced wine with a lot of character!
 
-                            Gold Medal Berlin Wine Awards 2018.</p>
+                        Gold Medal Berlin Wine Awards 2018.</p>
                     </span>
                     <span class="tasteprofile_info" style="display:none">
                         <img class="tasteprofile_img" src="images/photos/wineshop/tasteprofile2.png" alt="" />
