--- a/wineshop.html
+++ b/wineshop.html
@@ -74,13 +74,13 @@
     <template id="product_template">
         <article class="productlist">
             <a href="product.html?product_id=" class="subpage_link">
-                <img class="productlist_image" src="images/photos/wineshop/femmefatale_wine.png" alt="" />
+                <img class="product_image" src="images/photos/wineshop/femmefatale_wine.png" alt="" />
             </a>
-            <div class="productlist_text">
-                <h4 class="productlist_title">Femme Fatale</h4>
-                <h5 class="productlist_winery">Carpe Diem</h5>
-                <div class="productlist_description">Finely balanced wine with a lot of character - light, fresh, but still rich of fruity flavour</div>
-                <p class="productlist_price">150</p>
+            <div class="product_text">
+                <h4 class="product_title">Femme Fatale</h4>
+                <h5 class="product_winery">Carpe Diem</h5>
+                <div class="product_shortdescription">Finely balanced wine with a lot of character - light, fresh, but still rich of fruity flavour</div>
+                <p class="product_price">150</p>
             </div>
         </article>
     </template>
