--- a/aboutus.html
+++ b/aboutus.html
@@ -7,7 +7,75 @@
     <link rel="stylesheet" href="css/aboutus.css">
 </head>
 
+   <header>
+
+    <nav>
+        <div> <a href="index.html"><img class="logo" src="images/icons/homepage/moldovin_logo.svg"></a></div>
+        <ul>
+            <li><a href="index.html">HOME</a></li>
+            <li><a href="aboutus.html">ABOUT US</a></li>
+            <li><a href="wineshop.html">WINE SHOP</a></li>
+            <li><a href="events.html">EVENTS</a></li>
+        </ul>
+    </nav>
+
+</header>
+
+
+
+
 <body>
+
+
+
+
+
+
+
+
+    <footer>
+        <img class="logowhite" src="images/icons/homepage/moldovin_white.svg" alt="Moldovin logo">
+        <div class="footergrid">
+            <div class="footer_1">
+                <p>Phone: +45 40116274</p>
+                <p>Mail: info@moldovin.dk</p>
+                <p>CVR: 38570609</p>
+            </div>
+
+            <div class="footer_2">
+                <div class="f2_information">
+                    <p class="ftitle_style">Information</p>
+                    <p>About us</p>
+                    <p>Wineries</p>
+                    <p>Shipping</p>
+                </div> <br>
+                <div class="f2_Useful Links">
+                    <p class="ftitle_style">Information</p>
+                    <p>Contact us</p>
+                    <p>Leave a review</p>
+                    <p>Terms and Conditions</p>
+                </div>
+            </div>
+
+            <div class="footer_3">
+                <div class="stay_connected">
+                    <p class="ftitle_style">Stay connected</p>
+                    <p>Subscribe to our newsletter. Don’t worry we won’t spam you. You’ll only get the most important information and special offers!</p>
+                    <button>SUBSCRIBE</button>
+                </div> <br>
+                <div class="our_partners">
+                    <p class="ftitle_style">Our Partners</p>
+                    <img class="partners" src="images/icons/homepage/partners_logo.svg">
+                </div>
+
+
+            </div>
+
+        </div>
+
+        <p class="copyright">Copyright © Moldovin</p>
+    </footer>
+
     <script src=""></script>
 </body>
 </html>
