updates style and html for aboutus

--- a/aboutus.html
+++ b/aboutus.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/aboutus.css">
 </head>
 
-   <header>
+<header>
 
     <nav>
         <div> <a href="index.html"><img class="logo" src="images/icons/homepage/moldovin_logo.svg"></a></div>
@@ -19,18 +19,134 @@
         </ul>
     </nav>
 
+    <div class="banner_about">
+        <h1>Events</h1>
+    </div>
+
 </header>
+
+<section class="we_connection">
+    <div class="we_connection_text">
+        <h3>ABOUT US</h3>
+        <h1>We're the connection</h1>
+        <p>We. Love. Wine. Not only do we love wine, but we want to bring excellent wines to our customers.
+            This is why we focus exclusively on Moldovan wines. Although Moldova is a little-known wine region, it can boast some of the richest wine culture in the world.</p>
+    </div>
+</section>
+
+<section class="the_beginnings">
+    <div class="img_beginnings_back"> <img class="the_beginnings_img" src="images/photos/aboutus/ourorigin.png"> </div>
+    <div class="our_beginnings_text">
+        <h3>THE BEGINNINGS</h3>
+        <h1>Our Originis</h1>
+
+        <p>Based in Copenhagen, Denmark, MoldoVin has been providing the Danish wine market with high quality Moldovan wine since 2017.
+
+            <br><br>It all started after a trip to Moldova. We were so fascinated by the quality of their homemade wines and all the traditions around it, that we felt we needed to share that well kept secret with other wine enthusiasts in Scandinavia.</p>
+    </div>
+</section>
+
+<section class="meet_family">
+    <div class="meet_family_text">
+        <h3>THE TEAM</h3>
+        <h1>Meet the family</h1>
+        <p>Our team has years of experience in online retail and world-wide distribution.
+            We are committed to providing our clients with fantastic service and great wines.</p>
+
+    </div>
+</section>
+
+<section class="family_photos_overview">
+    <div class="wrapper">
+
+        <div class="box">
+            <div><img class="member" src="images/photos/aboutus/marinus.png"></div>
+            <div class="member_text">
+                <p class="member_title">Marinus Wredstrøm</p>
+                <p class="member_text">Sales Operations</p>
+            </div>
+
+        </div>
+
+        <div class="box">
+            <div><img class="member" src="images/photos/aboutus/denise.png"></div>
+            <div class="member_text">
+                <p class="member_title">Denise Ene</p>
+                <p class="member_text">Marketing Manager
+</p>
+            </div>
+
+        </div>
+
+        <div class="box">
+            <div><img class="member" src="images/photos/aboutus/henry.png"></div>
+            <div class="member_text">
+                <p class="member_title">Henry Miller
+</p>
+                <p class="member_text">General Manager</p>
+            </div>
+
+        </div>
+
+        <div class="box">
+            <div><img class="member" src="images/photos/aboutus/petru.png"></div>
+            <div class="member_text">
+                <p class="member_title">Petru Catana</p>
+                <p class="member_text">Tech Operations</p>
+            </div>
+
+        </div>
+
+    </div>
+
+</section>
+
+    <section class="our_mission">
+    <div class="our_mission_text">
+        <h3>TWHY WE ARE HERE</h3>
+        <h1>Our Mission</h1>
+        <p>Our mission is to bring Moldovan wine and culture to Scandinavia and provide a platform for our community to experience exciting wines.
+<br><br>
+We want to push your boundaries in new and interesting ways.</p>
+    </div>
+</section>
+
+     <section class="center">
+            <h5>Book your tasting here</h5>
+
+            <p>To book an event with us, send us a message telling the number of people that will be attending the event or any specific requests and we'll make the experience happen!</p>
+
+            <div class="wrapper_contactus">
+                <div class="name">
+                    <p>Name*</p>
+                    <div class="name_box"></div>
+                </div>
+                <div class="email">
+                    <p>E-mail*</p>
+                    <div class="email_box"></div>
+                </div>
+                <div class="company">
+                    <p>Company*</p>
+                    <div class="company_box"></div>
+                </div>
+                <div class="phone">
+                    <p>Phone number</p>
+                    <div class="phone_box"></div>
+                </div>
+                <div class="message">
+                    <p>Message</p>
+                    <div class="message_box"></div>
+                </div>
+                <div class="button_send_container"><button class="button_send">Send</button></div>
+            </div>
+
+        </section>
+
 
 
 
 
 <body>
-
-
-
-
-
-
 
 
     <footer>
@@ -77,5 +193,4 @@
     </footer>
 
     <script src=""></script>
-</body>
-</html>
+</body></html>
