finished web version about us page

--- a/aboutus.html
+++ b/aboutus.html
@@ -103,7 +103,7 @@
 
     <section class="our_mission">
     <div class="our_mission_text">
-        <h3>TWHY WE ARE HERE</h3>
+        <h3>WHY WE ARE HERE</h3>
         <h1>Our Mission</h1>
         <p>Our mission is to bring Moldovan wine and culture to Scandinavia and provide a platform for our community to experience exciting wines.
 <br><br>
@@ -112,9 +112,7 @@ We want to push your boundaries in new and interesting ways.</p>
 </section>
 
      <section class="center">
-            <h5>Book your tasting here</h5>
-
-            <p>To book an event with us, send us a message telling the number of people that will be attending the event or any specific requests and we'll make the experience happen!</p>
+            <h5>Contact Us</h5>
 
             <div class="wrapper_contactus">
                 <div class="name">
@@ -137,7 +135,7 @@ We want to push your boundaries in new and interesting ways.</p>
                     <p>Message</p>
                     <div class="message_box"></div>
                 </div>
-                <div class="button_send_container"><button class="button_send">Send</button></div>
+                <div class="button_send_container"><button class="button_send">SEND</button></div>
             </div>
 
         </section>
