additional css styling

--- a/aboutus.html
+++ b/aboutus.html
@@ -38,7 +38,7 @@
     <div class="img_beginnings_back"> <img class="the_beginnings_img" src="images/photos/aboutus/ourorigin.png"> </div>
     <div class="our_beginnings_text">
         <h3>THE BEGINNINGS</h3>
-        <h1>Our Originis</h1>
+        <h1>Our Origin</h1>
 
         <p>Based in Copenhagen, Denmark, MoldoVin has been providing the Danish wine market with high quality Moldovan wine since 2017.
 
